# phy-simulator

./: CMakeLists.txt  Makefile  README.md
python/: visualize.py
src/: ber.cpp  ber.h  bit_generator.cpp  bit_generator.h  channel.cpp  channel.h  fft.cpp  fft.h  main.cpp  ofdm_rx.cpp  ofdm_rx.h  ofdm_tx.cpp  ofdm_tx.h
src/modulation/: qam16.cpp  qam16.h  qpsk.cpp  qpsk.h
tests/: test_modulation.cpp
